--- a/phone.html
+++ b/phone.html
@@ -5,5 +5,12 @@
 </head>
 <body>
    <h1>Hello MOTO</h1>
+   <script src="/socket.io/socket.io.js"></script>
+   <script>
+   window.onload = function() {
+      var socket = io.connect('http://localhost');
+      socket.emit('roll', {});
+   }
+   </script>
 </body>
 </html>
