--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	  	gui.add(Roller, 'roll');
 	  	//Roller.roll();
 
-	  	var socket = io.connect('http://localhost');
+	  	var socket = io.connect('http://localhost:3000');
 	  	socket.on('dice', function (data) {
 	    console.log(data);
 	    Roller.roll();
@@ -65,5 +65,6 @@
 <body>
 	<div id="viewport"></div>
 	<div id="total"></div>
+	<div id="rollVal"></div>
 </body>
 </html>
