--- a/phone.html
+++ b/phone.html
@@ -10,7 +10,8 @@
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
    <script>
    window.onload = function() {
-      var socket = io.connect('http://craps.ngrok.com');
+      //var socket = io.connect('http://craps501.herokuapp.com/');
+      var socket = io.connect('http://craps501.herokuapp.com/');
 
       socket.on('roll', function(data) {
          $('#result').text(data.text);
