--- a/lobby.html
+++ b/lobby.html
@@ -6,7 +6,7 @@
    <meta charset="UTF-8" />
    <link rel="stylesheet" type="text/css" href="/css/splash.css"/>
    <script src="/socket.io/socket.io.js"></script>
-   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
    <script type="text/javascript">
    $(document).ready(function() {
       var socket = io.connect('http://localhost:3000');
@@ -27,21 +27,19 @@
          })
       });
 
-      socket.on('joinSuccess', function (data) {
-         console.log('redirecting to...' + data.url);
-         window.location = data.url;
-      });
-
-      socket.on('joinFailure', function (data) {
-         console.log('failed to join table' + data.tableNumber);
+      $.get('http://casino.curtiswendel.me:3000/api/getUser/', function(data) {
+         console.log(data);
+         $.each(data, function(i, user) {
+            $('#userId').append('<option value="'+user.id+'">'+user.screenName+'</option');
+         });
       });
 
       $('.joinTable').click(function() {
-         window.location = 'http://localhost:3000/game?t='+ $(this).parent().data('tableNumber')+'&name='+$('input[name="username"]').val();
+         window.location = 'http://localhost:3000/game?t='+ $(this).parent().data('tableNumber')+'&id='+$('#userId').val();
       });
 
-      $('.leaveTable').click(function() {
-         socket.emit('leaveTable', {tableNumber: $(this).parent().data('tableNumber') });
+      $('.roll').click(function() {
+         socket.emit('roll', {tableNumber: $(this).parent().data('tableNumber')});
       });
 
       setInterval(function() {
@@ -55,55 +53,47 @@
 <body>
    <h1>501 Craps</h1>
    <label>Username</label>
-   <input type="text" name="username"/>
+   <select id="userId"></select>
    <div id="tableInfo">
       <div id="t0" class="table" data-table-number="0">
          <h2>Table 0</h2>
          <div class="numPlayers"></div>
-         <button class="joinTable">Join</button>
-         <button class="leaveTable">Leave</button>
+         <button class="joinTable">Join</button><button class="roll">Roll</button>
       </div>
       <div id="t1" class="table" data-table-number="1">
          <h2>Table 1</h2>
          <div class="numPlayers"></div>
-         <button class="joinTable">Join</button>
-         <button class="leaveTable">Leave</button>
+         <button class="joinTable">Join</button><button class="roll">Roll</button>
       </div>
       <div id="t2" class="table" data-table-number="2">
          <h2>Table 2</h2>
          <div class="numPlayers"></div>
-         <button class="joinTable">Join</button>
-         <button class="leaveTable">Leave</button>
+         <button class="joinTable">Join</button><button class="roll">Roll</button>
       </div>
       <div id="t3" class="table" data-table-number="3">
          <h2>Table 3</h2>
          <div class="numPlayers"></div>
-         <button class="joinTable">Join</button>
-         <button class="leaveTable">Leave</button>
+         <button class="joinTable">Join</button><button class="roll">Roll</button>
       </div>
       <div id="t4" class="table" data-table-number="4">
          <h2>Table 4</h2>
          <div class="numPlayers"></div>
-         <button class="joinTable">Join</button>
-         <button class="leaveTable">Leave</button>
+         <button class="joinTable">Join</button><button class="roll">Roll</button>
       </div>
       <div id="t5" class="table" data-table-number="5">
          <h2>Table 5</h2>
          <div class="numPlayers"></div>
-         <button class="joinTable">Join</button>
-         <button class="leaveTable">Leave</button>
+         <button class="joinTable">Join</button><button class="roll">Roll</button>
       </div>
       <div id="t6" class="table" data-table-number="6">
          <h2>Table 6</h2>
          <div class="numPlayers"></div>
-         <button class="joinTable">Join</button>
-         <button class="leaveTable">Leave</button>
+         <button class="joinTable">Join</button><button class="roll">Roll</button>
       </div>
       <div id="t7" class="table" data-table-number="7">
          <h2>Table 7</h2>
          <div class="numPlayers"></div>
-         <button class="joinTable">Join</button>
-         <button class="leaveTable">Leave</button>
+         <button class="joinTable">Join</button><button class="roll">Roll</button>
       </div>
    </div>
 </body>
