--- a/lobby.html
+++ b/lobby.html
@@ -6,9 +6,18 @@
    <meta charset="UTF-8" />
    <link rel="stylesheet" type="text/css" href="/css/splash.css"/>
    <script src="/socket.io/socket.io.js"></script>
+   <script type="text/javascript" src="/js/external/three.min.r55.js"></script>
+   <script type="text/javascript" src="/js/external/stats.js"></script>
+   <script type="text/javascript" src="/js/external/physi.r55.js"></script>
+   <script type="text/javascript" src="/js/diceroller.js"></script>
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
    <script type="text/javascript">
+   Physijs.scripts.worker = '/js/external/physijs_worker.js';
+
    $(document).ready(function() {
+      //Roller.init();
+      //Roller.loop();
+
       var socket = io.connect('http://localhost:3000');
       //var socket = io.connect('http://craps.ngrok.com/');
       //var socket = io.connect('http://craps501.herokuapp.com/');
@@ -42,6 +51,10 @@
          socket.emit('roll', {tableNumber: $(this).parent().data('tableNumber')});
       });
 
+      $('.passDice').click(function() {
+         socket.emit('passDice', {tableNumber: $(this).parent().data('tableNumber')});
+      });
+
       setInterval(function() {
          console.log('requesting data');
          socket.emit('getTableStatus', {});
@@ -52,6 +65,7 @@
 </head>
 <body>
    <h1>501 Craps</h1>
+   <div id="viewport" style="display: inline-block; width: 100%; background-color: black"></div>
    <label>Username</label>
    <select id="userId"></select>
    <div id="tableInfo">
@@ -59,41 +73,49 @@
          <h2>Table 0</h2>
          <div class="numPlayers"></div>
          <button class="joinTable">Join</button><button class="roll">Roll</button>
+         <button class="passDice">Pass Dice</button>
       </div>
       <div id="t1" class="table" data-table-number="1">
          <h2>Table 1</h2>
          <div class="numPlayers"></div>
          <button class="joinTable">Join</button><button class="roll">Roll</button>
+         <button class="passDice">Pass Dice</button>
       </div>
       <div id="t2" class="table" data-table-number="2">
          <h2>Table 2</h2>
          <div class="numPlayers"></div>
          <button class="joinTable">Join</button><button class="roll">Roll</button>
+         <button class="passDice">Pass Dice</button>
       </div>
       <div id="t3" class="table" data-table-number="3">
          <h2>Table 3</h2>
          <div class="numPlayers"></div>
          <button class="joinTable">Join</button><button class="roll">Roll</button>
+         <button class="passDice">Pass Dice</button>
       </div>
       <div id="t4" class="table" data-table-number="4">
          <h2>Table 4</h2>
          <div class="numPlayers"></div>
          <button class="joinTable">Join</button><button class="roll">Roll</button>
+         <button class="passDice">Pass Dice</button>
       </div>
       <div id="t5" class="table" data-table-number="5">
          <h2>Table 5</h2>
          <div class="numPlayers"></div>
          <button class="joinTable">Join</button><button class="roll">Roll</button>
+         <button class="passDice">Pass Dice</button>
       </div>
       <div id="t6" class="table" data-table-number="6">
          <h2>Table 6</h2>
          <div class="numPlayers"></div>
          <button class="joinTable">Join</button><button class="roll">Roll</button>
+         <button class="passDice">Pass Dice</button>
       </div>
       <div id="t7" class="table" data-table-number="7">
          <h2>Table 7</h2>
          <div class="numPlayers"></div>
          <button class="joinTable">Join</button><button class="roll">Roll</button>
+         <button class="passDice">Pass Dice</button>
       </div>
    </div>
 </body>
